# WhyTrade

./: .env.example  .gitignore  README.md  debug_yfinance.py  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  debug_registration.py  pyproject.toml  reset_db.py  test_db_insert.py
backend/alembic/: env.py
backend/alembic/versions/: 19b8da80f676_initial_migration.py  1cd60e94e960_remove_max_loss_amount_field.py  658e6e3a77af_add_trade_reflections_table.py  9f434b5cacce_add_missing_tables_users_and_trades.py  d0a9a7134cc9_add_enhanced_entry_rationale_fields.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  reflections.py  stock.py  trades.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  reflection.py  trade.py  user.py
backend/app/schemas/: __init__.py  reflection.py  trade.py  user.py
backend/app/services/: stock_service.py
database/: init.sql
docs/: app_design.md  docker_troubleshooting.md  setup_guide.md  trade_entry_guide.md
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ProtectedRoute.tsx  RationaleViewDialog.tsx  ReflectionDialog.tsx  SettleTradeDialog.tsx  TradeDialog.tsx
frontend/src/features/: store.ts
frontend/src/features/auth/: authSlice.ts
frontend/src/features/trades/: tradeSlice.ts
frontend/src/pages/: LoginPage.tsx  PositionsPage.tsx  RegisterPage.tsx  TradesPage.tsx
frontend/src/services/: api.ts  authService.ts  tradeService.ts
